# QQuickBgfx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bgfx_item.h  bgfx_item.mm  bgfx_item.qrc  bgfx_renderer.h  bgfx_renderer.mm  main.cpp  main.qml
bgfx_under_qml/: bgfx_renderer.h  bgfx_renderer.mm
bgfx_under_qml/bgfx_item/: bgfx_item.cpp  bgfx_item.h
bgfx_under_qml/bgfx_item/bgfx_node/Metal/: bgfx_node.h  bgfx_node.mm
qquick_bgfx/: bgfx_renderer.cpp  bgfx_renderer.h  qquick_bgfx.h  qquick_bgfx.mm
qquick_bgfx/bgfx_item/: bgfx_item.cpp  bgfx_item.h
qquick_bgfx/bgfx_item/bgfx_node/Metal/: bgfx_node.h  bgfx_node.mm
src/: camera.cpp  camera.h  engine.cpp  qbgfx.cpp  qbgfx.h  qbgfx_utils.cpp  qbgfx_utils.h  qquick_bgfx.cpp  qquick_bgfx.h  qquick_bgfx.mm  qquick_bgfx_opengl.cpp  renderer.cpp  renderer.h
src/components/: base.cpp  base.h  camera.cpp  camera.h
src/engine/: engine.cpp  engine.h
src/qquickbgfxitem/: qquickbgfxitem.cpp  qquickbgfxitem.h
src/qsgbgfxnode/: qsgbgfxnode.cpp  qsgbgfxnode.h
src/qsgbgfxnode/D3D/: qsgbgfxnode.cpp  qsgbgfxnode.h
src/qsgbgfxnode/Metal/: qsgbgfxnode.h  qsgbgfxnode.mm
src/renderer/: renderer.cpp  renderer.h
src/systems/: camera_system.cpp  camera_system.h  qquickbgfx.cpp  qquickbgfx.h
